--- a/Teamproject/loaproject/loaTier/static/css/userResult.css
+++ b/Teamproject/loaproject/loaTier/static/css/userResult.css
@@ -169,22 +169,7 @@ header {
   color: #fff;
 }
 
-#select1:hover {
-  background-color: #6682ff;
-  box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
-}
-
-#select2:hover {
-  background-color: #47c83e;
-  box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
-}
-
-#select3:hover {
-  background-color: #ffb2f5;
-  box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
-}
-
-#send {
+#viewAllResult {
   display: flex;
   margin-left: 150px;
   text-align: center;
@@ -196,7 +181,7 @@ header {
   font-size: 17px;
 }
 
-#send:hover {
+#viewAllResult:hover {
   background-color: #6682ff;
   box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
 }
