--- a/Teamproject/loaproject/loaTier/templates/index.html
+++ b/Teamproject/loaproject/loaTier/templates/index.html
@@ -4,11 +4,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static "css/index.css" %}?after" />
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static "css/index.css" %}?ver=1" />
+    <title>LoaTier</title>
   </head>
+  
   <body>
+    <header>
+      <h1> menu</h1>
+      <a href="/">home</a>
+    </header>
+   
     <div>
+      <div class="select">
+        <input type="radio" id="select1" name="shop" checked="checked"><label for="select1"><img src="{% static "imgdata/zkaps.png" %}" width="50px" height="50px" draggable="false" /></label>
+        <input type="radio" id="select2" name="shop"><label for="select2"><img src="{% static "imgdata/dlffl.png" %}" width="50px" height="50px" draggable="false" /></label>
+        <input type="radio" id="select3" name="shop"><label for="select3"><img src="{% static "imgdata/dpzl.png" %}" width="50px" height="50px" draggable="false" /></label>
+      </div>
+       <th><button id="send" align="center">전송</button></th>
       <div id="main">
         <div border="1" class="maintb" align="center" id="icon">
           <div class="lain">
@@ -35,28 +47,41 @@
       </div>
       <div border="1" class="maintb">
         <div id="seticon" class="renkin">
+          {% comment %} 
           <div class="imgtag" id="1img" draggable="true">
-            <img src="{% static "imgdata/bigi.jpg" %}" width="50px" height="50px" draggable="false" />
+            <img src="{% static "imgdata/1img.webp" %}" width="50px" height="50px" draggable="false" />
           </div>
           <div class="imgtag" id="2img" draggable="true">
-            <img src="{% static "imgdata/52.webp" %}" width="50px" height="50px" draggable="false" />
+            <img src="{% static "imgdata/2img.webp" %}" width="50px" height="50px" draggable="false" />
           </div>
           <div class="imgtag" id="3img" draggable="true">
-            <img src="{% static "imgdata/bunmang.webp" %}" width="50px" height="50px" draggable="false" />
+            <img src="{% static "imgdata/3img.webp" %}" width="50px" height="50px" draggable="false" />
           </div>
           <div class="imgtag" id="4img" draggable="true">
-            <img src="{% static "imgdata/burst.webp" %}" width="50px" height="50px" draggable="false" />
+            <img src="{% static "imgdata/4img.webp" %}" width="50px" height="50px" draggable="false" />
           </div>
           <div class="imgtag" id="5img" draggable="true">
-            <img src="{% static "imgdata/chesul.webp" %}"  width="50px" height="50px" draggable="false" />
+            <img src="{% static "imgdata/5img.webp" %}"  width="50px" height="50px" draggable="false" />
           </div>
           <div class="imgtag" id="6img" draggable="true">
-            <img src="{% static "imgdata/choongyuk.webp" %}"  width="50px" height="50px" draggable="false" />
-          </div>
+            <img src="{% static "imgdata/6img.webp" %}"  width="50px" height="50px" draggable="false" />
+          </div> {% endcomment %}
+          
+          
+          {% comment %} {% for i in "x"|rjust:"52" %}
+             <div class="imgtag" draggable="true">
+              <img src="{% get_static_prefix %}imgdata/{{ i }}img.webp" width="50px" height="50px" draggable="false" />
+             </div>
+          {% endfor %} {% endcomment %}
+             {% for i in "x"|rjust:"52" %}
+              <div class="imgtag" draggable="true" id="{{ forloop.counter }}">
+                <img src="{% get_static_prefix %}imgdata/{{ forloop.counter }}img.webp" width="50px" height="50px" draggable="false" />
+              </div>
+             {% endfor %}
+          
         </div>
       </div>
-      <div><button id="send">전송</button></div>
     </div>
-    <script src="{% static "js/index.js" %}?after" > </script>
+    <script src="{% static "js/index.js" %}?ver=1" > </script>
   </body>
   </html>
