--- a/Teamproject/loaproject/loaTier/templates/userResult.html
+++ b/Teamproject/loaproject/loaTier/templates/userResult.html
@@ -3,7 +3,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static "css/userResult.css" %}?ver=2" />
+    <link rel="stylesheet" href="{% static "css/userResult.css" %}?ver=1" />
     <title>LoaTier</title>
   </head>
   <body>
@@ -24,7 +24,9 @@
             <div width="50px" align="center" id="Aclass" class="rank">A</div>
             <div width="500px" class="renkin" id="Aicon">
               {%for tier1 in tier1%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier1}}img.webp" width="50px" height="50px" draggable="false"></div>
+                {%if tier1 != '' %}
+                   <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier1}}.webp" width="50px" height="50px" draggable="false"></div>
+                {% endif %}
               {%endfor%}
             </div>
           </div>
@@ -32,7 +34,9 @@
             <div align="center" id="Bclass" class="rank">B</div>
             <div width="500px" class="renkin" id="Bicon">
               {%for tier2 in tier2%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier2}}img.webp" width="50px" height="50px" draggable="false"></div>
+                {%if tier2 != '' %}
+                  <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier2}}.webp" width="50px" height="50px" draggable="false"></div>
+                {% endif %}
               {%endfor%}
             </div>
           </div>
@@ -40,23 +44,30 @@
             <div align="center" id="Cclass" class="rank">C</div>
             <div width="500px" class="renkin" id="Cicon">
               {%for tier3 in tier3%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier3}}img.webp" width="50px" height="50px" draggable="false"></div>
+                {%if tier3 != '' %}
+                  <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier3}}.webp" width="50px" height="50px" draggable="false"></div>
+                {% endif %}
               {%endfor%}
+
             </div>
           </div>
           <div class="lain">
             <div align="center" id="Dclass" class="rank">D</div>
             <div width="500px" class="renkin" id="Dicon">
               {%for tier4 in tier4%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier4}}img.webp" width="50px" height="50px" draggable="false"></div>
-              {%endfor%}
+                {%if tier4 != ''%}
+                  <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier4}}.webp" width="50px" height="50px" draggable="false"></div>
+                {%endif%}
+              {% endfor %}
             </div>
           </div>
           <div class="lain">
             <div align="center" id="Eclass" class="rank">E</div>
             <div width="500px" class="renkin" id="Eicon">
               {%for tier5 in tier5%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier5}}img.webp" width="50px" height="50px" draggable="false"></div>
+                {%if tier5 != ''%}
+                  <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier5}}.webp" width="50px" height="50px" draggable="false"></div>
+                {%endif%}
               {%endfor%}
             </div>
           </div>
@@ -66,7 +77,7 @@
         <div id="seticon" class="renkin">
 
          {%for tierout in tierout%}
-            <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tierout}}img.webp" width="50px" height="50px" draggable="false"></div>
+            <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tierout}}.webp" width="50px" height="50px" draggable="false"></div>
          {%endfor%}
 
         </div>
