--- a/Teamproject/loaproject/loaTier/templates/results/userResult.html
+++ b/Teamproject/loaproject/loaTier/templates/results/userResult.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <header>
-      <h1> menu</h1>
-      <a href="/">home</a>
+      {% include "includes/header.html" %}
     </header>
+
     <div>
+      
       <div class="select">
-        <input type="radio" id="select" name="shop" checked="checked"><label for="select"><img src="{% static "imgdata/zkaps.png" %}" width="50px" height="50px" draggable="false" /></label>
-        <input type="radio" id="select2" name="shop"><label for="select2"><img src="{% static "imgdata/dlffl.png" %}" width="50px" height="50px" draggable="false" /></label>
-        <input type="radio" id="select3" name="shop"><label for="select3"><img src="{% static "imgdata/dpzl.png" %}" width="50px" height="50px" draggable="false" /></label>
+        {%include "includes/selector.html"%}
       </div>
+
       <div><button id="viewAllResult">통계 결과 보기</button></div>
       <div id="main">
         <div border="1" class="maintb" align="center" id="icon">
