--- a/Teamproject/loaproject/loaTier/templates/index.html
+++ b/Teamproject/loaproject/loaTier/templates/index.html
@@ -20,7 +20,7 @@
         <input type="radio" id="select2" name="shop"><label for="select2"><img src="{% static "imgdata/dlffl.png" %}" width="50px" height="50px" draggable="false" /></label>
         <input type="radio" id="select3" name="shop"><label for="select3"><img src="{% static "imgdata/dpzl.png" %}" width="50px" height="50px" draggable="false" /></label>
       </div>
-       <th><button id="send" align="center">전송</button></th>
+       <th><button id="send" align="center" type="hidden">전송</button></th>
       <div id="main">
         <div border="1" class="maintb" align="center" id="icon">
           <div class="lain">
