--- a/Teamproject/loaproject/loaTier/static/css/allResult.css
+++ b/Teamproject/loaproject/loaTier/static/css/allResult.css
@@ -10,40 +10,12 @@ body {
   display: flex;
   flex-direction: column;
 }
-
-#seticon {
-  width: 500px;
-  height: 1500px;
-  border: solid 2px black;
-
-  margin-right: auto;
-  background-color: slategray;
-  display: flex;
-  flex-direction: row;
-}
-
-.renkin {
-  display: flex;
-  flex: 1;
-  width: 800px;
-  min-height: 100px;
-  border: solid 2px black;
-  background-color: slategray;
-
-  flex-direction: row;
-  flex-wrap: wrap;
-  overflow-y: auto;
-  position: relative;
-}
-
 #main {
   display: flex;
   float: left;
   margin-left: 150px;
-  width: 800px;
-  flex-direction: row;
+  width: 1000px;
 }
-
 body {
   background-color: azure;
   user-select: none;
@@ -51,10 +23,36 @@ body {
 
 .lain {
   display: flex;
+  
   flex-direction: row;
 }
 .rank {
   min-height: 100px;
+}
+
+#seticon {
+  width: 300px;
+  height: 1500px;
+  border: solid 2px black;
+
+  margin-right: 0;
+  background-color: slategray;
+  display: flex;
+  flex-direction: row;
+}
+
+.renkin {
+  flex: 1;
+  width: 1000px;
+  min-height: 100px;
+  border: solid 2px black;
+  background-color: slategray;
+
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+  display: flex;
+
 }
 
 #Aclass {
@@ -171,26 +169,12 @@ header {
   color: #fff;
 }
 
-#select1:hover {
-  background-color: #6682ff;
-  box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
-}
+#viewAllResult {
+  display: inline-block;
+  position: fixed;
+  right: 200px;
+  top: 110px;
 
-#select2:hover {
-  background-color: #47c83e;
-  box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
-}
-
-#select3:hover {
-  background-color: #ffb2f5;
-  box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
-}
-
-#send {
-  display: flex;
-  margin-left: 150px;
-  text-align: center;
-  margin-top: 0px;
   width: 200px;
   height: 35px;
   background-color: #5c75e6;
@@ -198,7 +182,31 @@ header {
   font-size: 17px;
 }
 
-#send:hover {
+#viewAllResult:hover {
   background-color: #6682ff;
   box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
 }
+
+
+/* styling of the tooltip display */
+.tooltip_image {
+  display: none;
+  position: absolute;
+  top: -60px;
+  z-index: 1;
+  padding: 8px;
+  font-size: 1rem;
+  border-radius: 2px;
+  animation: fadeIn 0.6s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+ }
+
+ 
