--- a/Teamproject/loaproject/loaTier/templates/index.html
+++ b/Teamproject/loaproject/loaTier/templates/index.html
@@ -16,9 +16,9 @@
    
     <div>
       <div class="select">
-        <input type="radio" id="select1" name="shop" checked="checked"><label for="select1"><img src="{% static "imgdata/zkaps.png" %}" width="50px" height="50px" draggable="false" /></label>
-        <input type="radio" id="select2" name="shop"><label for="select2"><img src="{% static "imgdata/dlffl.png" %}" width="50px" height="50px" draggable="false" /></label>
-        <input type="radio" id="select3" name="shop"><label for="select3"><img src="{% static "imgdata/dpzl.png" %}" width="50px" height="50px" draggable="false" /></label>
+        <input type="radio" id="select1" name="shop" value="kamen" checked="checked"><label for="select1"><img src="{% static "imgdata/zkaps.png" %}" width="50px" height="50px" draggable="false" /></label>
+        <input type="radio" id="select2" name="shop" value="iliakhan"><label for="select2"><img src="{% static "imgdata/dlffl.png" %}" width="50px" height="50px" draggable="false" /></label>
+        <input type="radio" id="select3" name="shop" value="echidna"><label for="select3"><img src="{% static "imgdata/dpzl.png" %}" width="50px" height="50px" draggable="false" /></label>
       </div>
        <th><button id="send" align="center">전송</button></th>
       <div id="main">
@@ -47,38 +47,11 @@
       </div>
       <div border="1" class="maintb">
         <div id="seticon" class="renkin">
-          {% comment %} 
-          <div class="imgtag" id="1img" draggable="true">
-            <img src="{% static "imgdata/1img.webp" %}" width="50px" height="50px" draggable="false" />
-          </div>
-          <div class="imgtag" id="2img" draggable="true">
-            <img src="{% static "imgdata/2img.webp" %}" width="50px" height="50px" draggable="false" />
-          </div>
-          <div class="imgtag" id="3img" draggable="true">
-            <img src="{% static "imgdata/3img.webp" %}" width="50px" height="50px" draggable="false" />
-          </div>
-          <div class="imgtag" id="4img" draggable="true">
-            <img src="{% static "imgdata/4img.webp" %}" width="50px" height="50px" draggable="false" />
-          </div>
-          <div class="imgtag" id="5img" draggable="true">
-            <img src="{% static "imgdata/5img.webp" %}"  width="50px" height="50px" draggable="false" />
-          </div>
-          <div class="imgtag" id="6img" draggable="true">
-            <img src="{% static "imgdata/6img.webp" %}"  width="50px" height="50px" draggable="false" />
-          </div> {% endcomment %}
-          
-          
-          {% comment %} {% for i in "x"|rjust:"52" %}
-             <div class="imgtag" draggable="true">
-              <img src="{% get_static_prefix %}imgdata/{{ i }}img.webp" width="50px" height="50px" draggable="false" />
-             </div>
-          {% endfor %} {% endcomment %}
-             {% for i in "x"|rjust:"52" %}
-              <div class="imgtag" draggable="true" id="{{ forloop.counter }}">
-                <img src="{% get_static_prefix %}imgdata/{{ forloop.counter }}img.webp" width="50px" height="50px" draggable="false" />
-              </div>
-             {% endfor %}
-          
+          {% for engv in engvs %}
+            <div class="imgtag" draggable="true" id="{{engv}}">
+              <img src="{% get_static_prefix %}imgdata/{{engv}}.webp" width="50px" height="50px" draggable="false" />
+            </div>
+          {% endfor %}
         </div>
       </div>
     </div>
