--- a/Teamproject/loaproject/loaTier/static/css/allResult.css
+++ b/Teamproject/loaproject/loaTier/static/css/allResult.css
@@ -194,6 +194,9 @@ header {
   font-size: 1rem;
   border-radius: 2px;
   animation: fadeIn 0.6s;
+  background-color: white;
+  min-height: 150px;
+  min-width: 250px;
 }
 
 @keyframes fadeIn {
