--- a/Teamproject/loaproject/loaTier/templates/index/index.html
+++ b/Teamproject/loaproject/loaTier/templates/index/index.html
@@ -15,7 +15,7 @@
    
     <div>
       <div class="select">
-        {%include "includes/selector1.html"%}
+        {%include "includes/selector.html"%}
       </div>
 
        <th><button id="send" align="center">전송</button></th>
