--- a/Teamproject/loaproject/loaTier/static/css/index.css
+++ b/Teamproject/loaproject/loaTier/static/css/index.css
@@ -29,9 +29,10 @@ body {
   min-height: 100px;
   border: solid 2px black;
   background-color: slategray;
-
   flex-direction: row;
   flex-wrap: wrap;
+  overflow-y: auto;
+  position: relative;
 }
 
 #main {
