--- a/Teamproject/loaproject/loaTier/templates/index/index_illiakan.html
+++ b/Teamproject/loaproject/loaTier/templates/index/index_illiakan.html
@@ -51,7 +51,7 @@
           {%include "includes/ABCDE.html"%}
           <div border="1" class="maintb">
             <div id="seticon" class="renkin">
-              {% for i in engv %}
+              {% for i in engvs %}
               <div class="imgtag" draggable="true" id="{{ i }}">
                 <img
                   src="{% get_static_prefix %}imgdata/{{i}}.webp"
