--- a/Teamproject/loaproject/loaTier/templates/includes/selector.html
+++ b/Teamproject/loaproject/loaTier/templates/includes/selector.html
@@ -31,27 +31,38 @@
         display: flex;
         justify-content: center;
         align-items: center;
-      }
-      .select input[type="radio"] + label {
         background-color: #fff;
         color: #333;
       }
+
       .select input[type="radio"]:checked + label {
         background-color: #333;
         color: #fff;
       }
 
-      #select1:hover {
+      #select1:checked + label {
+        background-color: #6682ff;
+        box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
+      }
+      #select1:hover + label {
         background-color: #6682ff;
         box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
       }
 
-      #select2:hover {
+      #select2:checked + label {
+        background-color: #47c83e;
+        box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
+      }
+      #select2:hover + label {
         background-color: #47c83e;
         box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
       }
 
-      #select3:hover {
+      #select3:checked + label {
+        background-color: #ffb2f5;
+        box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
+      }
+      #select3:hover + label {
         background-color: #ffb2f5;
         box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
       }
@@ -62,27 +73,21 @@
       <nav>
         <ul>
           <li>
-            <input
-              type="radio"
-              id="select1"
-              name="shop"
-              checked="checked"
-              value="1"
-            />
+            <input type="radio" id="select1" name="shop" value="kamen" />
             <label for="select1">
               <img src="{% static "imgdata/zkaps.png" %}" width="50px"
               height="50px" draggable="false" />
             </label>
           </li>
           <li>
-            <input type="radio" id="select2" name="shop" value="2" />
+            <input type="radio" id="select2" name="shop" value="illiakan" />
             <label for="select2">
               <img src="{% static "imgdata/dlffl.png" %}" width="50px"
               height="50px" draggable="false" />
             </label>
           </li>
           <li>
-            <input type="radio" id="select3" name="shop" value="3" />
+            <input type="radio" id="select3" name="shop" value="echidna" />
             <label for="select3">
               <img src="{% static "imgdata/dpzl.png" %}" width="50px"
               height="50px" draggable="false" />
