--- a/Teamproject/loaproject/loaTier/templates/index/index1.html
+++ b/Teamproject/loaproject/loaTier/templates/index/index1.html
@@ -23,19 +23,28 @@
 
       <div id="main">
 
-      <script>
-        var getParams = "echidna";
-        var raid = document.getElementById("select1");
-        if (raid.value == getParams) {
-          raid.checked = true;
-        }
-      </script>
+    <script>
+      var getParams = "{{raid}}";
+      var raid1 = document.getElementById("select1");
+      var raid2 = document.getElementById("select2");
+      var raid3 = document.getElementById("select3");
+      var raid1_name = raid1.value;
+      var raid2_name = raid2.value;
+      var raid3_name = raid3.value;
+      if (raid1_name == getParams) {
+        raid1.checked = true;
+      } else if(raid2_name == getParams){
+        raid2.checked = true;
+      } else if(raid3_name == getParams){
+        raid3.checked = true;
+      }
+    </script>
       
-      {%if raid_name == kamen%}
+      {%if raid1_name == kamen%}
         {%include "index/index_kamen.html"%}
-      {%elif raid_name == illiakan%}
+      {%elif raid2_name == illiakan%}
         {%include "index/index_illiakan.html"%}
-      {%elif raid_name == echidna%}
+      {%elif raid3_name == echidna%}
         {%include "index/index_echidna.html"%}  
       {%endif%}
       </div>
