--- a/Teamproject/loaproject/loaTier/templates/index/index_kamen.html
+++ b/Teamproject/loaproject/loaTier/templates/index/index_kamen.html
@@ -66,6 +66,7 @@
         </ul>
       </nav>
     </kamenTier>
+    {% comment %}
     <script>
       var getParams = "{{raid}}";
       var raid = document.getElementById("select1");
@@ -73,5 +74,6 @@
         raid.checked = true;
       }
     </script>
+    {% endcomment %}
   </body>
 </html>
