--- a/Teamproject/loaproject/loaTier/templates/userResult.html
+++ b/Teamproject/loaproject/loaTier/templates/userResult.html
@@ -3,20 +3,27 @@
 <html lang="en"><head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static "css/userResult.css" %}?ver=2" />
+    <link rel="stylesheet" href="{% static "css/userResult.css" %}?ver=1" />
     <title>LoaTier</title>
   </head>
   <body>
     <header>
-      <h1> menu</h1>
-      <a href="/">home</a>
+      {% include "includes/header.html" %}
     </header>
-    <div>
-      <div class="select">
-        <input type="radio" id="select1" name="shop" value="kamen" checked="checked"><label for="select"><img src="{% static "imgdata/zkaps.png" %}" width="50px" height="50px" draggable="false" /></label>
-        <input type="radio" id="select2" name="shop" value="iliakhan"><label for="select2"><img src="{% static "imgdata/dlffl.png" %}" width="50px" height="50px" draggable="false" /></label>
-        <input type="radio" id="select3" name="shop" value="echidna"><label for="select3"><img src="{% static "imgdata/dpzl.png" %}" width="50px" height="50px" draggable="false" /></label>
-      </div>
+    <div class="select">
+      <nav>
+        <ul>
+          <li>
+            <input type="radio" id="{{raid}}" name="shop" value="{{raid}}" checked/>
+            <label for="{{raid}}">
+              <img src="{% get_static_prefix%}imgdata/{{raid}}.png" width="50px"
+              height="50px" draggable="false" />
+            </label>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
       <div><button id="viewAllResult">통계 결과 보기</button></div>
       <div id="main">
         <div border="1" class="maintb" align="center" id="icon">
@@ -24,7 +31,9 @@
             <div width="50px" align="center" id="Aclass" class="rank">A</div>
             <div width="500px" class="renkin" id="Aicon">
               {%for tier1 in tier1%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier1}}.webp" width="50px" height="50px" draggable="false"></div>
+                {%if tier1 != '' %}
+                   <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier1}}.webp" width="50px" height="50px" draggable="false"></div>
+                {% endif %}
               {%endfor%}
             </div>
           </div>
@@ -32,7 +41,9 @@
             <div align="center" id="Bclass" class="rank">B</div>
             <div width="500px" class="renkin" id="Bicon">
               {%for tier2 in tier2%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier2}}.webp" width="50px" height="50px" draggable="false"></div>
+                {%if tier2 != '' %}
+                  <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier2}}.webp" width="50px" height="50px" draggable="false"></div>
+                {% endif %}
               {%endfor%}
             </div>
           </div>
@@ -40,23 +51,30 @@
             <div align="center" id="Cclass" class="rank">C</div>
             <div width="500px" class="renkin" id="Cicon">
               {%for tier3 in tier3%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier3}}.webp" width="50px" height="50px" draggable="false"></div>
+                {%if tier3 != '' %}
+                  <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier3}}.webp" width="50px" height="50px" draggable="false"></div>
+                {% endif %}
               {%endfor%}
+
             </div>
           </div>
           <div class="lain">
             <div align="center" id="Dclass" class="rank">D</div>
             <div width="500px" class="renkin" id="Dicon">
               {%for tier4 in tier4%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier4}}.webp" width="50px" height="50px" draggable="false"></div>
-              {%endfor%}
+                {%if tier4 != ''%}
+                  <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier4}}.webp" width="50px" height="50px" draggable="false"></div>
+                {%endif%}
+              {% endfor %}
             </div>
           </div>
           <div class="lain">
             <div align="center" id="Eclass" class="rank">E</div>
             <div width="500px" class="renkin" id="Eicon">
               {%for tier5 in tier5%}
-                <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier5}}.webp" width="50px" height="50px" draggable="false"></div>
+                {%if tier5 != ''%}
+                  <div class="imgtag"><img src="{% get_static_prefix %}imgdata/{{tier5}}.webp" width="50px" height="50px" draggable="false"></div>
+                {%endif%}
               {%endfor%}
             </div>
           </div>
@@ -70,6 +88,6 @@
         </div>
       </div>
     </div>
-    <script src="{% static "js/userResult.js" %}?ver=2" > </script>
+    <script src="{% static "js/userResult.js" %}?ver=1" > </script>
   </body>
   </html>
