--- a/Teamproject/loaproject/loaTier/templates/includes/selector.html
+++ b/Teamproject/loaproject/loaTier/templates/includes/selector.html
@@ -73,23 +73,23 @@
       <nav>
         <ul>
           <li>
-            <input type="radio" id="select1" name="shop" value="kamen" />
-            <label for="select1">
-              <img src="{% static "imgdata/zkaps.png" %}" width="50px"
+            <input type="radio" id="kamen" name="shop" value="kamen" />
+            <label for="kamen">
+              <img src="{% static "imgdata/kamen.png" %}" width="50px"
               height="50px" draggable="false" />
             </label>
           </li>
           <li>
-            <input type="radio" id="select2" name="shop" value="illiakan" />
-            <label for="select2">
-              <img src="{% static "imgdata/dlffl.png" %}" width="50px"
+            <input type="radio" id="illiakan" name="shop" value="illiakan" />
+            <label for="illiakan">
+              <img src="{% static "imgdata/illiakan.png" %}" width="50px"
               height="50px" draggable="false" />
             </label>
           </li>
           <li>
-            <input type="radio" id="select3" name="shop" value="echidna" />
-            <label for="select3">
-              <img src="{% static "imgdata/dpzl.png" %}" width="50px"
+            <input type="radio" id="echidna" name="shop" value="echidna" />
+            <label for="echidna">
+              <img src="{% static "imgdata/echidna.png" %}" width="50px"
               height="50px" draggable="false" />
             </label>
           </li>
