--- a/Teamproject/loaproject/loaTier/templates/includes/selector.html
+++ b/Teamproject/loaproject/loaTier/templates/includes/selector.html
@@ -40,29 +40,29 @@
         color: #fff;
       }
 
-      #select1:checked + label {
+      #kamen:checked + label {
         background-color: #6682ff;
         box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
       }
-      #select1:hover + label {
+      #kamen:hover + label {
         background-color: #6682ff;
         box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
       }
 
-      #select2:checked + label {
+      #illiakan:checked + label {
         background-color: #47c83e;
         box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
       }
-      #select2:hover + label {
+      #illiakan:hover + label {
         background-color: #47c83e;
         box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
       }
 
-      #select3:checked + label {
+      #echidna:checked + label {
         background-color: #ffb2f5;
         box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
       }
-      #select3:hover + label {
+      #echidna:hover + label {
         background-color: #ffb2f5;
         box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
       }
