--- a/Teamproject/loaproject/loaTier/templates/home.html
+++ b/Teamproject/loaproject/loaTier/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static "css/index.css" %}?ver=1" />
-    <script src="{% static "js/index.js" %}?ver=1" > </script>
+    {% comment %} <script src="{% static "js/index.js" %}?ver=1" > </script> {% endcomment %}
     <title>LoaTier</title>
   </head>
   
@@ -19,5 +19,6 @@
     <div>
       HOME
     </div>
+    
   </body>
   </html>
