--- a/Teamproject/loaproject/loaTier/static/css/allResult.css
+++ b/Teamproject/loaproject/loaTier/static/css/allResult.css
@@ -29,6 +29,7 @@ body {
   min-height: 100px;
 }
 
+
 #seticon {
   width: 300px;
   height: 1500px;
@@ -42,7 +43,7 @@ body {
 
 .renkin { /* 내부 아이콘들의 box가 중앙 정렬 되도록 수정 */
   flex: 1;
-  width: 1000px;
+  min-width: 1000px;
   min-height: 100px;
   border: solid 2px black;
   background-color: slategray;
@@ -52,6 +53,11 @@ body {
   align-items: center;
 }
 
+.icon{
+  width: 70px;
+  height: 60px;
+  padding: 4px 0px;
+}
 
 #Aclass {
   background-color: red;
@@ -99,12 +105,13 @@ body {
   align-items: center;
 }
 .ebox {  /* 이미지 아이콘이 들어간 박스 아이콘이 박스 중앙으로 오도록 수정*/
-  width: 70px;
-  height: 70px;
+  width: 80px;
+  height: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  flex-direction: column;
+  margin: 4px 1px;
 }
 
 .dragging {
@@ -187,6 +194,15 @@ header {
 #viewAllResult:hover {
   background-color: #6682ff;
   box-shadow: 0px 0px 0px 5px rgba(192, 194, 250, 0.7);
+}
+
+.text{
+  border: solid 1px black;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  width: 70px;
+  text-align: center;
+  font-size: 11px;
 }
 
 /* styling of the tooltip display */
